samples/_failures_safe/1761318230_196a44_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bb5db26a.c: In function ‘main’:
./samples/SAFE/__tmp_bb5db26a.c:148:12: error: missing terminating " character
  148 |     printf("Compressed data
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bb5db26a.c:148:5: error: expected expression at end of input
  148 |     printf("Compressed data
      |     ^~~~~~
./samples/SAFE/__tmp_bb5db26a.c:148:5: error: expected declaration or statement at end of input
